<resources>
    <string name="app_name">BNote</string>
    
    <!-- Strings related to login -->
    <string name="prompt_nim">USER ID</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_nim">This NIM is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- BNote Main - Navigation Drawer -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Fragment -->
    <string name="fragment_help">HELP</string>
    <string name="fragment_about">ABOUT</string>
    <string name="fragment_setting">SETTING</string>

    <!-- About -->
    <string name="about_version">Version 1.0</string>
    <string name="about_motto">Motto</string>
    <string name="about_developer">Developed by TeamName</string>
    <string name="about_team_cs_dept">Computer Science:</string>
    <string name="about_team_leader">Leader and Back-End: Edward Leonardi</string>
    <string name="about_team_cs_database">Database: Chelsy and Fansi Lantana</string>
    <string name="about_team_cs_layout">Layout: Evelyn Kharisma and Janis Giovanni</string>
    <string name="about_team_and_dept">Art and Design:</string>
    <string name="about_team_and_icon">Icon and Layout: Janet Harsono</string>
    <string name="about_team_and_logo">Logo and Layout: Nathannia Euodia</string>
    <string name="about_termofservice">Term of Service</string>
    <string name="about_privacypolicy">Privacy Policy</string>
    <string name="about_legalnotices">Legal Notices</string>


    <string name="title_activity_notes_list">NotesList</string>
    <string name="title_activity_open_note">OpenNote</string>
    <string name="title_activity_comment">Comment</string>
    <string name="title_activity_addnote">Comment</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="title_activity_image_picker">ImagePickerActivity</string>

</resources>
